--- a/VRob1/VRob1.vcxproj.filters
+++ b/VRob1/VRob1.vcxproj.filters
@@ -13,5 +13,21 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\ressources">
+      <UniqueIdentifier>{b1a2dbff-4864-48e8-a4e1-ac80dc27328c}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="ressources\video2.mp4">
+      <Filter>Source Files\ressources</Filter>
+    </Media>
+    <Media Include="ressources\video1.mp4">
+      <Filter>Source Files\ressources</Filter>
+    </Media>
   </ItemGroup>
 </Project>
