--- a/.gitignore
+++ b/.gitignore
@@ -361,6 +361,9 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-
-*.vcxproj.filters
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
 *.vcxproj.user
+*.vcxproj.filters
